# tbp-log

./: CMakeLists.txt  README.md
src/main/: CMakeLists.txt
src/main/c++/: Categories.cpp  FileWriter.cpp  Injector.cpp  Loggers.cpp  SignalManager.cpp  SyncSink.cpp
src/main/include/tbp/log/: ActionVariant.h  AsyncLogger.fwd.h  AsyncLogger.h  AsyncSink.h  Buffer.h  BufferAllocator.h  BufferHandle.h  Categories.h  Category.h  CategoryId.h  Config.h  Decoder.h  DefaultTypes.h  Encoder.h  FileWriter.h  Formatter.h  ILogger.h  Injector.h  Level.h  Logger.h  Loggers.h  Msg.h  SignalManager.h  SyncSink.h  ThreadLocalLogger.h  Type.h
src/test/: CMakeLists.txt
src/test/c++/: AsyncLoggerPerfTest.cpp  AsyncLoggerTest.cpp  EncoderTest.cpp  FileWriterHelper.h  SyncLoggerPerfTest.cpp  SyncLoggerTest.cpp  main.cpp
src/test/c++/test/: Context.cpp  Context.h  Time.h  UserDefinedLoggable.h
